--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -586,15 +586,17 @@ For precise variants, END is $\mbox{POS} + \mbox{length of REF allele} - 1$, and
 ##INFO=<ID=SVTYPE,Number=1,Type=String,Description="Type of structural variant">
 \end{verbatim}
 \normalsize
-SVTYPE is a primitive basic data type and must be specified for all structural variants. Its value can usually be deduced from the REF and ALT fields, however despite this redundancy it is quite useful for filtering. For each VCF record, SVTYPE must be assigned exactly one of the following values:
+\end{samepage}
+SVTYPE is a primitive basic data type and must be specified for all structural variants.
+Its value can usually be deduced from the REF and ALT fields, however despite this redundancy it is quite useful for filtering.
+For each VCF record, SVTYPE must be assigned exactly one of the following values:
 \begin{itemize}
-  \item DEL: Deletion relative to the reference
-\item INS:  Insertion relative to the reference
-  \item DUP: Region of elevated copy number relative to the reference
-  \item INV: Inversion of reference sequence
-\item CNV:  Copy number variable region (multiallelic)
-\item BND:  Breakend
-  \item BND: Breakend
+\item DEL: Deletion relative to the reference
+\item INS: Insertion relative to the reference
+\item DUP: Region of elevated copy number relative to the reference
+\item INV: Inversion of reference sequence
+\item CNV: Copy number variable region (multiallelic)
+\item BND: Breakend
 \end{itemize}
 
 \footnotesize
@@ -607,8 +609,6 @@ If ALT is longer than REF (e.g.\ insertions), SVLEN must be positive; if ALT is 
 Simple inversions will have SVLEN=0.
 The size of the inversion can be determined by the POS field and the END attribute.
 One SVLEN value for each ALT allele.
-One value for each ALT allele.
-Longer ALT alleles (e.g.\ insertions) have positive values, shorter ALT alleles (e.g.\ deletions) have negative values.
 
 \footnotesize
 \begin{verbatim}
