--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -591,7 +591,7 @@ Each bit is explained in the following table:
 \footnote{The earliest versions of this specification used $5'$ to
   $5'$ (in original orientation, TLEN\#1; dashed parts of the reads
   indicate soft-clipped bases) while later ones used leftmost to
-  rightmost mapped based (TLEN\#2).  Note: these two definitions agree in most
+  rightmost mapped base (TLEN\#2).  Note: these two definitions agree in most
   alignments, but differ in the case of overlaps where the first
   segment aligns beyond the start of the last segment.
 
