--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -312,11 +312,10 @@ The {\tt TP} field is often omitted, which implies linear.}\\\cline{2-3}
   & {\tt LB} & Library.\\\cline{2-3}
   & {\tt PG} & Programs used for processing the read group.\\\cline{2-3}
   & {\tt PI} & Predicted median insert size.\\\cline{2-3}
-  & {\tt PL} & Platform/technology used to produce the reads. \emph{Valid values}: 
-  {\tt BGI}, {\tt CAPILLARY}, {\tt LS454}, {\tt ILLUMINA}, {\tt SOLID}, {\tt HELICOS}, {\tt IONTORRENT}, {\tt ONT}, {\tt PACBIO}. 
-  Nacent technologies that have not yet been added to the spec, should omit the tag, and optionally put identifying information into the {\tt PM} tag.  \\\cline{2-3}
-  & {\tt PM} & Platform model. Free-form text providing further details of the
-  platform/technology used.\\\cline{2-3}
+  & {\tt PL} & Platform/technology used to produce the reads. \emph{Valid values are}:
+  {\tt BGI}, {\tt CAPILLARY}, {\tt HELICOS}, {\tt ILLUMINA}, {\tt IONTORRENT}, {\tt LS454}, {\tt ONT}, {\tt PACBIO}, {\tt SOLID}.
+  Tag should be omitted when the technology is not in this list, (though the {\tt PM} tag may still be present in this case) or is unknown.\\\cline{2-3}
+  & {\tt PM} & Platform model. Free-form text providing further details of the platform/technology used.\\\cline{2-3}
   & {\tt PU} & Platform unit (e.g., flowcell-barcode.lane for Illumina or slide for SOLiD). Unique identifier.\\\cline{2-3}
   & {\tt SM} & Sample. Use pool name where a pool is being sequenced.\\\cline{1-3}
   \multicolumn{2}{|l}{\tt @PG} & Program. \\\cline{2-3}
